✨ DOM基礎第二回の進捗

--- a/javascript-02/javascript-test02-dom.html
+++ b/javascript-02/javascript-test02-dom.html
@@ -13,6 +13,7 @@
     <div> 
         <p><img id="sam1" src="img/image1.png" width="" alt="サンプル画像"></p>
         <h3>画像の説明</h3>
+        <p class="countP"> 1枚目 </p>
         <h2>h2タイトル</h2>
     </div>
 
@@ -21,7 +22,7 @@
         <li>前</li>
         <li>次</li>
     </ul>
-    <p>テキスト</p>
+    <p class="sampleP">テキスト</p>
     </div>
     <script src="js/script-dom.js"></script>
 </body>
